fix(swt-awt): keep AWT dispatch alive under a merged single-UI-thread JavaFX host